feat: verify email

--- a/.env
+++ b/.env
@@ -4,10 +4,14 @@ DB_PASSWORD='X5Q8Tjfp2SOD8tBu'
 DB_USERS_COLLECTION='users'
 DB_REFRESH_TOKENS_COLLECTION='refresh_tokens'
 PASSWORD_SECRET='@twitter@'
-JWT_SECRET='twitter123!@4321@#'
+JWT_SECRET_ACCESS_TOKEN='twitter123!@4321@#'
+JWT_SECRET_REFRESH_TOKEN='twitter123!@4321@#!123'
+JWT_SECRET_EMAIL_VERIFY_TOKEN='twitter123!@4321@#@#'
+```
 # If expireIn is number only then it is seconds
 # If expireIn is string then it is string format of time duration ( m, h, d, w)
 # milliseconds unit is used by default
 ACCESS_TOKEN_EXPIRES_IN='15m'
 REFRESH_TOKEN_EXPIRES_IN='7d'
+EMAIL_TOKEN_VERIFY_EXPIRES_IN='1d'
 ```
