--- a/.env
+++ b/.env
@@ -7,11 +7,13 @@ PASSWORD_SECRET='@twitter@'
 JWT_SECRET_ACCESS_TOKEN='twitter123!@4321@#'
 JWT_SECRET_REFRESH_TOKEN='twitter123!@4321@#!123'
 JWT_SECRET_EMAIL_VERIFY_TOKEN='twitter123!@4321@#@#'
+JWT_SECRET_FORGOT_PASSWORD_TOKEN='twitter123!@432112345'
 ```
 # If expireIn is number only then it is seconds
 # If expireIn is string then it is string format of time duration ( m, h, d, w)
 # milliseconds unit is used by default
 ACCESS_TOKEN_EXPIRES_IN='15m'
 REFRESH_TOKEN_EXPIRES_IN='7d'
-EMAIL_TOKEN_VERIFY_EXPIRES_IN='1d'
+EMAIL_TOKEN_VERIFY_EXPIRES_IN='1h'
+FORGOT_PASSWORD_TOKEN_EXPIRES_IN='1h'
 ```
