feat: follow & unfollow user

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DB_USERNAME='tamnguyen231173'
 DB_PASSWORD='X5Q8Tjfp2SOD8tBu'
 DB_USERS_COLLECTION='users'
 DB_REFRESH_TOKENS_COLLECTION='refresh_tokens'
+DB_FOLLOWERS_COLLECTION='followers'
 PASSWORD_SECRET='@twitter@'
 JWT_SECRET_ACCESS_TOKEN='twitter123!@4321@#'
 JWT_SECRET_REFRESH_TOKEN='twitter123!@4321@#!123'
