feat: login with google

--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@ REFRESH_TOKEN_EXPIRES_IN='7d'
 EMAIL_TOKEN_VERIFY_EXPIRES_IN='1h'
 FORGOT_PASSWORD_TOKEN_EXPIRES_IN='1h'
 ```
+
+GOOGLE_CLIENT_ID='499850157866-0klq4868rubslvar6rsltde6332chqr5.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='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'
+GOOGLE_REDIRECT_URI='http://localhost:3066/users/oauth/google'
+CLIENT_REDIRECT_URI='http://localhost:3050/login/oauth'
+```
