--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/formidable": "^3.4.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.2",
@@ -37,8 +38,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "formidable": "^3.5.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "sharp": "^0.32.4"
   }
 }
