--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "setupproject",
+  "name": "twitter-clone-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon",
+    "dev": "npx nodemon --development",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js --production",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
@@ -19,6 +19,7 @@
     "@types/formidable": "^3.4.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.196",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^20.4.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
@@ -41,6 +42,7 @@
     "formidable": "^3.5.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
     "sharp": "^0.32.4"
   }
