feat: streaming video

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,40 @@
 {
   "cSpell.words": [
+    "cách",
     "chưa",
+    "chúng",
+    "Công",
+    "cùng",
+    "cũng",
+    "cuối",
+    "diện",
     "định",
+    "đoạn",
     "fullname",
+    "hình",
     "khóa",
+    "khoản",
+    "luôn",
+    "lượng",
     "middlewares",
     "minetype",
+    "ngoại",
+    "người",
+    "phải",
+    "phân",
     "quicktime",
+    "thấy",
+    "theo",
+    "thúc",
+    "thức",
     "thực",
-    "unfollow"
+    "Thường",
+    "Tính",
+    "trên",
+    "tương",
+    "tưởng",
+    "tượng",
+    "unfollow",
+    "vượt"
   ]
 }
