--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/mime": "^3.0.1",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -42,6 +43,7 @@
     "formidable": "^3.5.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "mime": "^3.0.0",
     "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
     "sharp": "^0.32.4"
