feat: encode video to HLS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "cách",
+    "chẵn",
     "chưa",
     "chúng",
     "Công",
@@ -10,12 +11,20 @@
     "diện",
     "định",
     "đoạn",
+    "dùng",
+    "dụng",
+    "được",
+    "Đường",
+    "endcoding",
+    "ffprobe",
     "fullname",
     "hình",
     "khóa",
     "khoản",
+    "libx",
     "luôn",
     "lượng",
+    "Mbps",
     "middlewares",
     "minetype",
     "ngoại",
@@ -23,6 +32,7 @@
     "phải",
     "phân",
     "quicktime",
+    "thành",
     "thấy",
     "theo",
     "thúc",
@@ -35,6 +45,7 @@
     "tưởng",
     "tượng",
     "unfollow",
+    "veryslow",
     "vượt"
   ]
 }
