--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mime": "^3.0.0",
     "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
+    "nanoid": "^4.0.2",
     "sharp": "^0.32.4"
   }
 }
