--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "module": "CommonJS", // Quy định output module được sử dụng
-    "moduleResolution": "node", //
-    "target": "ES2020", // Target ouput cho code
+    "moduleResolution": "NodeNext", //
+    "target": "ES2020", // Target output cho code
     "outDir": "dist", // Đường dẫn output cho thư mục build
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     "strict": true /* Enable all strict type-checking options. */,
