--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/formidable": "^3.4.0",
     "@types/jsonwebtoken": "^9.0.2",
@@ -37,6 +38,7 @@
   "dependencies": {
     "@types/mime": "^3.0.1",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
