--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write ."
   },
-"author": "",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
@@ -37,6 +37,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.395.0",
     "@types/mime": "^3.0.1",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
