--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.395.0",
     "@aws-sdk/client-ses": "^3.395.0",
+    "@aws-sdk/lib-storage": "^3.395.0",
     "@types/mime": "^3.0.1",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
