--- a/package.json
+++ b/package.json
@@ -53,6 +53,11 @@
     "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
     "nanoid": "^4.0.2",
-    "sharp": "^0.32.4"
+    "sharp": "^0.32.4",
+    "socket.io": "^4.7.2"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
   }
 }
