--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DB_USERS_COLLECTION='users'
 DB_REFRESH_TOKENS_COLLECTION='refresh_tokens'
 DB_FOLLOWERS_COLLECTION='followers'
 DB_VIDEO_STATUS_COLLECTION='video_status'
+DB_CONVERSATIONS_COLLECTION='conversations'
 PASSWORD_SECRET='@twitter@'
 JWT_SECRET_ACCESS_TOKEN=
 JWT_SECRET_REFRESH_TOKEN=
