middleware server instance

--- a/.env.example
+++ b/.env.example
@@ -17,14 +17,19 @@ JWT_SECRET_FORGOT_PASSWORD_TOKEN=
 # If expireIn is number only then it is seconds
 # If expireIn is string then it is string format of time duration ( m, h, d, w)
 # milliseconds unit is used by default
-ACCESS_TOKEN_EXPIRES_IN='1h'
-REFRESH_TOKEN_EXPIRES_IN='7d'
-EMAIL_TOKEN_VERIFY_EXPIRES_IN='1h'
-FORGOT_PASSWORD_TOKEN_EXPIRES_IN='1h'
-```
+REFRESH_TOKEN_EXPIRES_IN='100d'
+ACCESS_TOKEN_EXPIRES_IN='1d'
+EMAIL_VERIFY_TOKEN_EXPIRES_IN='7d'
+FORGOT_PASSWORD_TOKEN_EXPIRES_IN='7d'
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI='http://localhost:3066/users/oauth/google'
-CLIENT_REDIRECT_URI='http://localhost:3050/login/oauth'
-```
+GOOGLE_CLIENT_ID=''
+GOOGLE_CLIENT_SECRET=''
+GOOGLE_REDIRECT_URI='http://localhost:4000/users/oauth/google'
+CLIENT_REDIRECT_CALLBACK='http://localhost:3000/login/oauth'
+CLIENT_URL='http://localhost:3000'
+
+AWS_ACCESS_KEY_ID=''
+AWS_SECRET_ACCESS_KEY=''
+AWS_REGION='ap-southeast-1'
+SES_FROM_ADDRESS='duthanhduoc@gmail.com'
+S3_BUCKET_NAME='twitter-clone-ap-southeast-1'
