--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon --development",
+    "dev": "NODE_ENV=development npx nodemon",
+    "dev:stag": "NODE_ENV=staging npx nodemon",
+    "dev:prod": "NODE_ENV=production npx nodemon",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start": "node dist/index.js --production",
+    "start:dev": "NODE_ENV=development node dist/index.js",
+    "start:stag": "NODE_ENV=staging node dist/index.js",
+    "start:prod": "NODE_ENV=production  node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write ."
-  },
+},
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -41,12 +45,16 @@
     "@aws-sdk/client-ses": "^3.395.0",
     "@aws-sdk/lib-storage": "^3.395.0",
     "@types/mime": "^3.0.1",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.9.0",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.0",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
@@ -54,7 +62,12 @@
     "mongodb": "^5.7.0",
     "nanoid": "^4.0.2",
     "sharp": "^0.32.4",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=19.0.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.7",
