setup github action

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,12 @@ jobs:
       - name: "Create env file"
         run: echo "${{ secrets.TWITTER_ENV_PRODUCTION }}" > .env.production
       - name: Build the Docker image
-        run: docker build --progress=plain -t tamnguyen231173/twitter:v1 .
+        run: |
+          IMAGE_TAG=tamnguyen231173/twitter:$(date +%s)
+          docker build . --file Dockerfile --tag $IMAGE_TAG
+          echo "::set-output name=image_tag::$IMAGE_TAG"
+        id: build
+      - name: Log in to Docker Hub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Push Docker image to Docker Hub
+        run: docker push ${{ steps.build.outputs.image_tag }}
