fix set output deprecated

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,11 @@ name: Docker Image CI
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - "main"
   pull_request:
-    branches: ["main"]
+    branches:
+      - "main"
 
 jobs:
   build:
@@ -12,15 +14,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: "Create env file"
-        run: echo "${{ secrets.TWITTER_ENV_PRODUCTION }}" > .env.production
+
+      - name: Create env file
+        run: |
+          echo "${{ secrets.TWITTER_ENV_PRODUCTION }}" > .env.production
+
       - name: Build the Docker image
         run: |
           IMAGE_TAG=tamnguyen231173/twitter:$(date +%s)
           docker build . --file Dockerfile --tag $IMAGE_TAG
-          echo "::set-output name=image_tag::$IMAGE_TAG"
-        id: build
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+
       - name: Log in to Docker Hub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ steps.build.outputs.image_tag }}
+        run: |
+          docker push ${{ env.IMAGE_TAG }}
