--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          IMAGE_TAG=tamnguyen231173/twitter:$(date +%s)
+          IMAGE_TAG=tamnguyen231173/twitter:v1
           docker build . --file Dockerfile --tag $IMAGE_TAG
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
@@ -31,3 +31,21 @@ jobs:
       - name: Push Docker image to Docker Hub
         run: |
           docker push ${{ env.IMAGE_TAG }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.HOST_USERNAME }}
+          password: ${{ secrets.HOST_PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+            docker pull tamnguyen231173/twitter:v1
+            docker stop twitter-api
+            docker rm twitter-api
+            docker run -dp 3000:3000 --name twitter-api --restart unless-stopped -v ~/TwitterApi/uploads:/app/uploads tamnguyen231173/twitter:v1
