create like route

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,10 +3,10 @@ name: Docker Image CI
 on:
   push:
     branches:
-      - "main"
+      - 'main'
   pull_request:
     branches:
-      - "main"
+      - 'main'
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          IMAGE_TAG=tamnguyen231173/twitter:v1
+          IMAGE_TAG="tamnguyen231173/twitter:v1"
           docker build . --file Dockerfile --tag $IMAGE_TAG
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
