--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ JWT_SECRET_ACCESS_TOKEN=
 JWT_SECRET_REFRESH_TOKEN=
 JWT_SECRET_EMAIL_VERIFY_TOKEN=
 JWT_SECRET_FORGOT_PASSWORD_TOKEN=
-```
+
 # If expireIn is number only then it is seconds
 # If expireIn is string then it is string format of time duration ( m, h, d, w)
 # milliseconds unit is used by default
@@ -30,6 +30,6 @@ CLIENT_URL='http://localhost:3000'
 
 AWS_ACCESS_KEY_ID=''
 AWS_SECRET_ACCESS_KEY=''
-AWS_REGION='ap-southeast-1'
-SES_FROM_ADDRESS='duthanhduoc@gmail.com'
-S3_BUCKET_NAME='twitter-clone-ap-southeast-1'
+AWS_REGION=''
+SES_FROM_ADDRESS=''
+S3_BUCKET_NAME=''
