--- a/openapi/components.yaml
+++ b/openapi/components.yaml
@@ -81,13 +81,13 @@ components:
           example: John Doe
         email:
           type: string
-          example: duthanhduoc100@gmail.com
+          example: tamnguyen231173@gmail.com
         password:
           type: string
-          example: Duoc123!
+          example: Tam123!
         confirm_password:
           type: string
-          example: Duoc123!
+          example: Tam123!
         date_of_birth:
           type: string
           format: ISO8601
@@ -266,7 +266,7 @@ components:
               email:
                 type: string
                 description: Email của user được đề cập
-                example: duthanhduoc@gmail.com
+                example: tamnguyen231173@gmail.com
         medias:
           type: array
           items:
